# cpsc-proj1-palindromes

./: CMakeLists.txt  MyFunctions.cpp  MyLinkedList.cpp  MyLinkedList.hpp  MyQueue.cpp  MyQueue.hpp  MyStack.cpp  MyStack.hpp  PalindromeI.cpp  PalindromeI.hpp  PalindromeR.cpp  PalindromeR.hpp  README.md  makefile  test_palindromes.cpp
